Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14131

Creator does not suggest location for empty file when in Disassembler

    XMLWordPrintable

Details

    • 972a306d5604b56bbdd555d9e9d8dda33b72975c

    Description

      1. Open a project.
      2. In the project, set a breakpoint.
      3. Let the project run up to the breakpoint.
      4. Switch to instruction wise operation mode.
      5. Select "File" -> "New File or Project..." -> "General" -> "Empty File" from the menu and the dialog.
        The "Path" edit for the file will be empty.

      Creator should use a sensible default for this, e.g. the user's home directory.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes