DocumentManager: Treat documents without path as temporary

Treat documents without path as temporary when trying to come up
with a directory to open the file dialog in.

Task-number: QTCREATORBUG-14131
Change-Id: I266fe6608b7c98b479f86412a0892413e1b99bb2
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>